[project]
name = "torchgeometric"
version = "0.1.0"
description = "A project using PyTorch with CUDA and graph libraries"
requires-python = ">=3.12"
dependencies = [
    "neo4j",
    "pre-commit",
    "ruff",
    "python-dotenv",
    "scikit-learn",
    "setuptools",
    "torch==2.5.0+cu124",
    "torch-sparse",
    "torch-geometric",
    "pyg-lib",
]

[tool.uv]
# Optional: This tells `uv` to prefer pre-built binaries, which helps with CUDA wheels
prefer-binary = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
