[project]
name = "classifier"
version = "0.1.0"
description = "A classifier module with an inference API"
authors = [{ name = "Laure Vancauwenberghe", email = "laure.vancauwenberghe@epfl.ch" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
